--- a/src/components/Flask/style.scss
+++ b/src/components/Flask/style.scss
@@ -25,6 +25,10 @@
 		margin-right: -$spacing-small;
 		flex-basis: 5em;
 	}
+
+	.preset {
+		margin-right: 0px !important;
+	}
 }
 
 // Units
